--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
-    "express": "~4.16.1"
+    "express": "~4.16.1",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
